changing domain to record